--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "wedding_registry",
   "version": "0.1.0",
   "private": true,
+  "main": "/server/index.js",
+  "proxy": "http://localhost:3333",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
